--- a/docs/process_examples/master00-amendment_record.adoc
+++ b/docs/process_examples/master00-amendment_record.adoc
@@ -8,11 +8,16 @@
 
 4+^h|*PROC Release 1.0.0*
 
-|[[latest_issue]]0.1.1
+|[[latest_issue]]0.1.12
+|Update perinatal care DLM.
+|D S Alves
+|[[latest_issue_date]]18 Nov 2020
+
+|0.1.1
 |Replace 'manual notification' callback by normal Handoff followed by manual notification Task wait state.
 |M Polajnar, +
  T Beale
-|[[latest_issue_date]]16 Apr 2020
+|16 Apr 2020
 
 |0.1.0
 |Initial writing.
