Significant additions to ACEP Covid19 severity guideline; Added Work Plan for D Alves ante-natal risk assessment.

--- a/docs/process_examples/master.adoc
+++ b/docs/process_examples/master.adoc
@@ -60,6 +60,7 @@ include::master04-order_management.adoc[leveloffset=+1]
 include::master05-chemo.adoc[leveloffset=+1]
 include::master06-antenatal.adoc[leveloffset=+1]
 include::master07-cancer_prescribing.adoc[leveloffset=+1]
+include::master08-Covid19_severity.adoc[leveloffset=+1]
 
 //
 // --------------------------------------------- REFERENCES -----------------------------------------------
