--- a/docs/overview/master.adoc
+++ b/docs/overview/master.adoc
@@ -32,6 +32,14 @@ include::master00-amendment_record.adoc[leveloffset=+1]
 
 * Thomas Beale, Ars Semantica; openEHR Foundation Management Board.
 
+=== Support
+
+The work reported in this specification has been funded by the following organisations:
+
+* City of Moscow
+* Better d.o.o., Slovenia
+* Ars Semantica, UK
+
 //
 // --------------------------------------------- TOC -----------------------------------------------
 //
@@ -43,9 +51,10 @@ include::master00-amendment_record.adoc[leveloffset=+1]
 :sectnums:
 include::master01-preface.adoc[leveloffset=+1]
 include::master02-introduction.adoc[leveloffset=+1]
-include::master03-conceptual_framework.adoc[leveloffset=+1]
-include::master04-architecture.adoc[leveloffset=+1]
-include::master05-subject_dataset.adoc[leveloffset=+1]
+include::master03-needs.adoc[leveloffset=+1]
+include::master04-deployment_paradigm.adoc[leveloffset=+1]
+include::master05-conceptual_architecture.adoc[leveloffset=+1]
+include::master06-deployment_architectures.adoc[leveloffset=+1]
 
 //
 // --------------------------------------------- REFERENCES -----------------------------------------------
